bugfix(list.scss): text-align fix

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -62,6 +62,7 @@
 	display: flex;
 	flex-direction: column;
 	outline: none;
+	text-align: center;
 	// padding: 0 var(--padding-xs);
 
 	&:nth-child(odd) {
@@ -182,6 +183,7 @@
 	// margin: 0.5rem var(--padding-xs);
 	// border-radius: var(--border-radius-md);
 	border: 1px solid #bbb;
+	text-align: center;
 	
 
 	.list-check-all {
